sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
   |
15 |     Dyn(Box<dyn StdError>),
   |     ^^^
